# Global_Calibration

./: README.md
global_optimization/: CMakeLists.txt  package.xml
global_optimization/include/optimization_calibration/: optimization_calibration.h
global_optimization/launch/: generate_datasets.launch
global_optimization/playfiles/: 50_test.jsp  81_pts.jsp  touchy.jsp
global_optimization/src/: check_video.cpp  generate_dataset.cpp  optimization_calibration.cpp  optimization_calibration_main.cpp
tool_model_optimization/: CMakeLists.txt
tool_model_optimization/include/tool_model/: tool_model.h
tool_model_optimization/include/tool_model_lib/: tool_model.h
tool_model_optimization/src/: tool_model.cpp  tool_model_main.cpp
